[gd_scene load_steps=2 format=3 uid="uid://b1cerogxx4gv5"]

[ext_resource type="Script" path="res://MENU/Options.gd" id="1_bvhcy"]

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_bvhcy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -896.0
offset_top = -568.5
offset_right = 896.0
offset_bottom = 568.5
grow_horizontal = 2
grow_vertical = 2
color = Color(0.301961, 0.301961, 0.301961, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-2, -5)
zoom = Vector2(0.5, 0.5)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -129.5
offset_top = -43.0
offset_right = 129.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="labels" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="HBoxContainer/labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Master"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Music" type="Label" parent="HBoxContainer/labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Music"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundFX" type="Label" parent="HBoxContainer/labels"]
layout_mode = 2
size_flags_vertical = 6
text = "SoundFX"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="Music" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="SoundFX" type="HSlider" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
max_value = 1.0
step = 0.05
value = 1.0

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -37.0
offset_top = 82.0
offset_right = 41.0
offset_bottom = 113.0
grow_horizontal = 2
text = "Back"

[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/SoundFX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
